--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,28 @@
 # Sentiment Analysis Project Dependencies
-# Python 3.11+
+# Python 3.9+
 
 # Data Processing
-pandas==2.3.3
-numpy==2.4.0
-openpyxl==3.1.5
+pandas>=2.0.0
+numpy>=1.24.0
+openpyxl>=3.0.0
 
 # Machine Learning
-scikit-learn==1.8.0
-scipy==1.16.3
-joblib==1.5.3
+scikit-learn>=1.0.0
+scipy>=1.10.0
+joblib>=1.2.0
 
 # Visualization
-matplotlib==3.10.8
-seaborn==0.13.2
-pillow==12.1.0
+matplotlib>=3.5.0
+seaborn>=0.12.0
+pillow>=9.0.0
 
 # Natural Language Processing
-nltk==3.9.2
+nltk>=3.8.0
 
 # Dashboard & Deployment
-streamlit==1.32.2
-wordcloud==1.9.3
-regex==2025.11.3
+streamlit>=1.28.0
+wordcloud>=1.9.0
 
 # Utilities
-python-dateutil==2.9.0
-pytz==2025.2
-tqdm==4.67.1
+python-dateutil>=2.8.0
+pytz>=2024.1
